<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.team9.flashbackmusic_team9.FlashBackActivity"
    tools:showIn="@layout/activity_flash_back">

    <Button
        android:id="@+id/viewPlaylist"
        android:layout_marginTop = "15dp"
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Playlist" />

    <Button
        android:id = "@+id/back"
        android:layout_marginTop = "15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "BACK"/>

    <Button
        android:id = "@+id/setTime"
        android:layout_marginTop = "15dp"
        android:layout_marginLeft="280dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "set time"/>

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop = "25dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/plus" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id = "@+id/title"
        android:layout_marginTop = "20dp"
        android:layout_centerHorizontal="true"
        android:textSize = "30sp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_below="@id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Title"/>

    <TextView
        android:id = "@+id/artist"
        android:layout_below="@id/title"
        android:text = "Artist"
        android:textSize = "30sp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id = "@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_centerHorizontal="true"
        android:text = "Album"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize = "30sp"
        android:layout_below="@id/artist"/>

    <TextView
        android:id = "@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_centerHorizontal="true"
        android:text = "Location"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize = "30sp"
        android:layout_below="@id/album"/>

    <TextView
        android:id = "@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_centerHorizontal="true"
        android:text = "Time"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize = "30sp"
        android:layout_below="@id/location"/>

    <TextView
        android:id = "@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/time"
        android:text = "User Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "20dp"
        android:textSize = "30sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        />

    <ImageButton
        android:id = "@+id/prevButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/username"
        android:layout_marginTop = "40dp"
        android:scaleType="fitXY"
        android:layout_marginLeft = "30dp"
        android:background="@drawable/previous" />

    <ImageButton
        android:id = "@+id/play_pause_button"
        android:layout_toRightOf="@id/prevButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below = "@id/username"
        android:layout_marginTop = "40dp"
        android:layout_marginLeft = "60dp"
        android:scaleType="fitXY"
        android:background="@drawable/play"/>

    <ImageButton
        android:id = "@+id/nextButton"
        android:layout_toRightOf="@id/play_pause_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below = "@id/username"
        android:layout_marginTop = "40dp"
        android:layout_marginLeft = "60dp"
        android:scaleType="fitXY"
        android:background="@drawable/next"/>

</RelativeLayout>