<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.team9.flashbackmusic_team9.ViewPlaylistActivity"
    tools:showIn="@layout/activity_view_playlist">
    <Button
        android:id = "@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "BACK"/>
    <ListView

        android:id="@+id/simple_track_list"
        android:layout_marginTop="50dp"
        android:layout_width="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp" />
</android.support.constraint.ConstraintLayout>
